--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
+    "@types/ethereum-blockies": "^0.1.0",
+    "ethereum-blockies": "^0.1.1",
     "karma-jasmine-html-reporter": "~1.7.0",
     "typescript": "~4.4.3"
   }
